chore: change base-url

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,11 +5,11 @@ import { SITE_TITLE } from "$consts";
 
 <header>
   <nav>
-    <h2><a href="/blog">{SITE_TITLE}</a></h2>
+    <h2><a href="/blog-template">{SITE_TITLE}</a></h2>
     <div class="internal-links">
-      <HeaderLink href="/blog">Home</HeaderLink>
-      <HeaderLink href="/blog/article">Blog</HeaderLink>
-      <HeaderLink href="/blog/about">About</HeaderLink>
+      <HeaderLink href="/blog-template">Home</HeaderLink>
+      <HeaderLink href="/blog-template/article">Blog</HeaderLink>
+      <HeaderLink href="/blog-template/about">About</HeaderLink>
     </div>
     <div class="social-links">
       <span style="width: 2em;">&nbsp;</span>
