--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,15 +21,13 @@
     0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
 }
 body {
-  --vp-font-family-base: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --vp-font-family-mono: ui-monospace, "Menlo", "Monaco", "Consolas",
-    "Liberation Mono", "Courier New", monospace;
+  --vp-font-family-base: "Inter", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --vp-font-family-mono: ui-monospace, "SF Mono", "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New", monospace;
 
   font-family: var(--vp-font-family-base);
   margin: 0;
   padding: 0;
-  text-align: justify;
+  /* text-align: justify; */
   background: var(--main-bg-color);
   background-size: 100% 600px;
   word-wrap: break-word;
@@ -37,6 +35,8 @@ body {
   color: var(--main-color);
   font-size: 18px;
   line-height: 1.7;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 main {
   width: 720px;
@@ -172,4 +172,9 @@ figcaption {
   display: grid;
   place-items: center;
   overflow-x: auto;
+}
+.title h1 {
+  text-align: center;
+  letter-spacing: normal !important;
+  word-spacing: normal !important;
 }
