--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -47,16 +47,8 @@ function getTextColor(bg: string): string {
       main {
         margin-left: 200px;
         padding: 2em;
-        max-width: 800px;
+        max-width: 100%;
         margin-right: auto;
-        margin-left: auto;
-        padding-left: calc(200px + 2em);
-      }
-      @media (max-width: 1200px) {
-        main {
-          margin-left: auto;
-          padding-left: 2em;
-        }
       }
       .prose {
         width: 100%;
