--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,17 @@
   --box-shadow: 0 2px 6px rgba(var(--gray), 25%),
     0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
 }
+
+:root[data-theme="dark"] {
+  --main-color: #dfdfd6;
+  --date-color: #dfdfd6;
+  --raw-bg-color: rgba(101, 117, 133, 0.16);
+  --main-bg-color: black;
+  --nav-bg-color: #1b1b1f;
+  --accent: rgb(158, 169, 252);
+  --accent-dark: #5c73e7;
+}
+
 body {
   --vp-font-family-base: "Inter", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   --vp-font-family-mono: ui-monospace, "SF Mono", "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New", monospace;
@@ -38,12 +49,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-main {
-  width: 720px;
-  max-width: calc(100% - 2em);
-  margin: auto;
-  padding: 3em 1em;
-}
+/* main {
+  /* width: 720px; */
+  /* max-width: calc(100%); */
+  /* margin: auto; */
+  /* padding: 3em 1em; */
+/* } */
 h1,
 h2,
 h3,
@@ -131,14 +142,14 @@ hr {
   border: none;
   border-top: 1px solid var(--raw-bg-color);
 }
-@media (max-width: 720px) {
+/* @media (max-width: 720px) {
   body {
     font-size: 16px;
   }
   main {
     padding: 1em;
   }
-}
+} */
 
 .sr-only {
   border: 0;
@@ -167,11 +178,14 @@ figcaption {
   display: inline-block;
   width: fit-content;
   margin: 0 0.15em;
+  padding: 0 0.2em;
 }
 .block-equation {
   display: grid;
   place-items: center;
   overflow-x: auto;
+  padding: 0.5em 0;
+  margin: 1em 0;
 }
 .title h1 {
   text-align: center;
@@ -205,4 +219,25 @@ html.frame {
   box-shadow: 0 2px 8px rgba(0,0,0,0.12);
   border-radius: 8px;
   outline: 2px solid white;
+}
+
+:root {
+  --math-color: #111;
+}
+:root[data-theme="dark"] {
+  --math-color: #fff;
+}
+
+.block-equation svg,
+.block-equation svg * {
+  opacity: 1 !important;
+  fill: var(--math-color) !important;
+  color: var(--math-color) !important;
+}
+
+.inline-equation svg,
+.inline-equation svg * {
+  opacity: 1 !important;
+  fill: var(--math-color) !important;
+  color: var(--math-color) !important;
 }
