--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -214,7 +214,9 @@ const allTags = [...new Set(posts.flatMap(post => post.data.tags))].sort();
     opacity: 1;
     max-height: 200px;
     transition: opacity 0.2s, max-height 0.2s, margin-top 0.2s, margin-bottom 0.2s;
-    overflow: hidden;
+    /* overflow: hidden; */
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 
   .tag-list[hidden], .tag-list.hide {
