--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -187,6 +187,13 @@ figcaption {
   padding: 0.5em 0;
   margin: 1em 0;
 }
+.align {
+  display: grid;
+  place-items: center;
+  overflow-x: auto;
+  padding: 0.5em 0;
+  margin: 1em 0;
+}
 .title h1 {
   text-align: center;
   letter-spacing: normal !important;
