Slight font improvement

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -93,6 +93,9 @@ a {
 a:hover {
   color: var(--accent-dark);
 }
+p, div {
+  font-family: "New Computer Modern", serif;
+}
 p {
   margin-bottom: 1em;
 }
