--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -99,8 +99,11 @@ p, div {
 p {
   margin-bottom: 1em;
 }
+ol {
+  list-style-position: inside;
+}
 .prose p {
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 textarea {
   width: 100%;
