--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -102,6 +102,9 @@ p {
 ol {
   list-style-position: inside;
 }
+ul {
+  list-style-position: inside;
+}
 .prose p {
   margin-bottom: 1em;
 }
@@ -154,6 +157,14 @@ blockquote {
 hr {
   border: none;
   border-top: 1px solid var(--raw-bg-color);
+}
+ol {
+  margin: 0;
+  padding: 0;
+}
+ul {
+  margin: 0;
+  padding: 0;
 }
 /* @media (max-width: 720px) {
   body {
