--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -51,7 +51,7 @@ function getTextColor(bg: string): string {
         margin-left: 245px;
         /* padding: 2em; */
         max-width: 100%;
-        margin-right: auto;
+        margin-right: 15px;
       }
       .prose {
         width: 100%;
