Slighly nicer mobile support

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -127,5 +127,10 @@
   .sidebar {
     width: 95%;
     border-right: none;
+    transform: translateX(0);
+  }
+
+  .hamburger-button {
+    display: none;
   }
 }
