--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -3,6 +3,7 @@
 // all pages through the use of the <BaseHead /> component.
 import "$styles/global.css";
 import { SITE_TITLE } from "$consts";
+import { BASE_PATH } from "$consts";
 
 interface Props {
   title: string;
@@ -18,8 +19,8 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="sitemap" href="/sitemap-index.xml" />
+<link rel="icon" type="image/svg+xml" href={`${BASE_PATH}/favicon.svg`}/>
+<link rel="sitemap" href={`${BASE_PATH}/sitemap-index.xml`}/>
 <link
   rel="alternate"
   type="application/rss+xml"
