--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -23,6 +23,21 @@ const posts = (await getCollection("blog")).sort(
 const allTags = [...new Set(posts.flatMap(post => post.tags))].sort();
 ---
 
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    console.log('DOMContentLoaded');
+    document.querySelectorAll('[data-typst-label]').forEach(el => {
+      const label = el.getAttribute('data-typst-label');
+      if (label) {
+        el.id = label;
+      }
+    });
+  });
+</script>
+
+---
+
 <html lang="en">
   <head>
     <BaseHead title={title} description={desc} />
